--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -211,12 +211,22 @@
 }
 
 .activites-item {
-    width: 100;
+    width: 100%;
     height: 100%;
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 2px 50px 0px rgba(107, 114, 128, 0.05);
     padding: 25px 35px;
+    position: relative;
+}
+
+.activites-item .cards-icon{
+    position: absolute;
+    right: 2%;
+    bottom: 2%;
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
 }
 
 .activities-item-img {
